feat: device mode transformation (#123)
* migration completed with test case from
version 1 to 2

* transformation call and parsing

* for db threshold logic,
deletion of first n events
run GC for removing elements with status 0x11
cloud mode to update status and not delete events
restrict batch size for device mode

* start device mode

* Fixed Issues around SQL Queries and Events Dumped to Factories before config fetch

* Updated Parsing logic as per the response of the sourceConfig endpoint

* Imposed Max Batch Size for Transform Endpoint and using ScheduleWithFixedRate()

* Fixed multiple issues in accordance with the updated schema

* Stopped Sending DestinationIds in the payload to transformation service

* Modifed response parsing from Transformation Service

* unit tests added for db persistence

* unit tests added for db persistence

* Updated Build.gradle files

* Minor changes:

* Improved the performance by optimizing the db operations

* Refactored the Device Mode Transformation Code

* Made Minor Changes

* Optimised LifeCycle code and added TODO's.

* Optimised LifeCycle class

* Implemented `isEventAllowed()` in deviceModeManager-> `makeFactoryDump()` and optimised the code.

* Remove TODO's related to extra line.

* Handled Few Edges cases in Device Mode Transformations

* Remove log message and optimised device mode manager class.

* Minor changes

* Updated TransformationRequest model class

* Updated Logic for dumping the events to the factories

* Fixed the issues in DB Migration

* Fixed issues in Unit Test Cases

* Improved log messages in Device mode manager class (#138)

* Improved log messages in Device mode manager class.

* Addressing comments

* Fixed issues in Unit Test Cases

* unit tests fixed

* Fixed issues with migration

* unit tests fixed

* unit tests fixed

* chore: merging develop

* feat: added token to body

* feat: added token to body

* fix: