@@ -1,11 +1,11 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 31
 
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 29
+        targetSdkVersion 31
         consumerProguardFiles 'proguard-consumer-rules.pro'
         buildConfigField("String", "VERSION_NAME", "\"${VERSION_NAME}\"")
     }
@@ -16,7 +16,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-consumer-rules.pro'
         }
     }
-
     testOptions {
         unitTests {
             includeAndroidResources = true
@@ -24,6 +23,9 @@ android {
     }
     testOptions {
         unitTests.returnDefaultValues = true
+        unitTests.all {
+            systemProperty 'robolectric.invokedynamic.enable', 'false'
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -37,24 +39,28 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'androidx.annotation:annotation:1.1.0'
 
-    testImplementation 'com.android.support.test:rules:1.0.2'
+    testImplementation ('com.android.support.test:rules:1.0.2')
     testImplementation 'com.android.support.test:runner:1.0.2'
     testImplementation 'org.robolectric:robolectric:4.3'
-    testImplementation 'androidx.test:core-ktx:1.2.0'
+    testImplementation 'androidx.test:core-ktx:1.5.0'
     testImplementation "org.hamcrest:hamcrest:2.2"
     testImplementation "org.mockito:mockito-core:3.11.2"
-    //issue - https://stackoverflow.com/a/58970042/5689605
-//    testImplementation "org.mockito:mockito-inline:3.11.2"
 
     testImplementation "org.powermock:powermock-core:2.0.9"
-    testImplementation "org.powermock:powermock-module-junit4:2.0.9"
+    testImplementation ("org.powermock:powermock-module-junit4:2.0.9"){
+        exclude group: 'org.hamcrest', module: 'hamcrest'
+    }
+    testImplementation "org.skyscreamer:jsonassert:1.5.1"
+
     testImplementation "org.powermock:powermock-api-mockito2:2.0.9"
     testImplementation 'org.awaitility:awaitility:4.2.0'
-
+    androidTestImplementation ('androidx.test.ext:junit:1.1.5')
     compileOnly "androidx.work:work-runtime:2.7.1"
 
 }
-
+tasks.withType(JavaExec) {
+    jvmArgs += ['--add-opens', 'java.base/jdk.internal.loader=ALL-UNNAMED']
+}
 //apply from: "${rootProject.projectDir}/scripts/publish-module.gradle"
 
 apply from: rootProject.file('gradle/mvn-publish.gradle')
